[tool.poetry]
name = "pymc-ode"
version = "0.1.0"
description = ""
authors = ["jbris <james.bristow@plantandfood.co.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pymc = "^5.10.2"
numpy = "^1.26.2"
arviz = "^0.16.1"
pytensor = "^2.18.3"
xarray-einstats = "^0.6.0"
matplotlib = "^3.8.2"
xarray = "^2023.12.0"
scipy = "^1.11.4"
pandas = "^2.1.4"
h5py = "^3.10.0"
numba = "^0.58.1"
jupyterlab = "^4.0.9"
notebook = "^7.0.6"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
